bies/biesVM/grammar/.antlr/biesVMParser.java
// Generated from /home/mauricio/Documents/Obsidian/2024/Ciclo2/Paradigmas/Evaluaciones/Proyectos/Proyecto 2/proyectoBiesVM/bies/biesVM/grammar/biesVM.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class biesVMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, TYPE=21, LDV=22, ADD=23, MUL=24, SUB=25, 
		DIV=26, NEG=27, EQ=28, GT=29, GTE=30, LT=31, LTE=32, RET=33, HLT=34, APP=35, 
		PRN=36, BLD=37, BST=38, LDF=39, INI=40, STK=41, SRK=42, LIN=43, LTK=44, 
		CST=45, INO=46, AND=47, OR=48, XOR=49, NOT=50, SWP=51, LNT=52, LEN=53, 
		POW=54, FUN=55, END=56, LABEL_IDENTIFIER=57, NUMBER=58, ID=59, STRING=60, 
		VALUE=61, COMMENT=62, ES=63, WS=64, NL=65;
	public static final int
		RULE_program = 0, RULE_functionDef = 1, RULE_statement = 2, RULE_instruction = 3, 
		RULE_initializeInstr = 4, RULE_loadInstr = 5, RULE_arithInstr = 6, RULE_logicalInst = 7, 
		RULE_controlInstr = 8, RULE_stackInstr = 9, RULE_funcInstr = 10, RULE_comparisonInstr = 11, 
		RULE_stringInstr = 12, RULE_listInstr = 13, RULE_boolData = 14, RULE_signInstr = 15, 
		RULE_lengthInstr = 16, RULE_castInstr = 17, RULE_array = 18, RULE_inputString = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "functionDef", "statement", "instruction", "initializeInstr", 
			"loadInstr", "arithInstr", "logicalInst", "controlInstr", "stackInstr", 
			"funcInstr", "comparisonInstr", "stringInstr", "listInstr", "boolData", 
			"signInstr", "lengthInstr", "castInstr", "array", "inputString"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ARGS:'", "'PARENT:'", "'BR'", "'BT'", "'BF'", "'NOP'", "'INP'", 
			"'EQ'", "'CAT'", "'SNT'", "'TOS'", "'LRK'", "'TOL'", "'true'", "'false'", 
			"'none'", "'SGN'", "'['", "','", "']'", null, "'LDV'", "'ADD'", "'MUL'", 
			"'SUB'", "'DIV'", "'NEG'", "'ET'", "'GT'", "'GTE'", "'LT'", "'LTE'", 
			"'RET'", "'HLT'", "'APP'", "'PRN'", "'BLD'", "'BST'", "'LDF'", "'INI'", 
			"'STK'", "'SRK'", "'LIN'", "'LTK'", "'CST'", "'INO'", "'AND'", "'OR'", 
			"'XOR'", "'NOT'", "'SWP'", "'LNT'", "'LEN'", "'POW'", "'$FUN'", "'$END'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "TYPE", "LDV", 
			"ADD", "MUL", "SUB", "DIV", "NEG", "EQ", "GT", "GTE", "LT", "LTE", "RET", 
			"HLT", "APP", "PRN", "BLD", "BST", "LDF", "INI", "STK", "SRK", "LIN", 
			"LTK", "CST", "INO", "AND", "OR", "XOR", "NOT", "SWP", "LNT", "LEN", 
			"POW", "FUN", "END", "LABEL_IDENTIFIER", "NUMBER", "ID", "STRING", "VALUE", 
			"COMMENT", "ES", "WS", "NL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "biesVM.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public biesVMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(biesVMParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(biesVMParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(biesVMParser.NL, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 72057593765445624L) != 0)) {
				{
				{
				setState(40);
				statement();
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NL) {
					{
					setState(41);
					match(NL);
					}
				}

				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefContext extends ParserRuleContext {
		public TerminalNode FUN() { return getToken(biesVMParser.FUN, 0); }
		public List<TerminalNode> ES() { return getTokens(biesVMParser.ES); }
		public TerminalNode ES(int i) {
			return getToken(biesVMParser.ES, i);
		}
		public List<TerminalNode> LABEL_IDENTIFIER() { return getTokens(biesVMParser.LABEL_IDENTIFIER); }
		public TerminalNode LABEL_IDENTIFIER(int i) {
			return getToken(biesVMParser.LABEL_IDENTIFIER, i);
		}
		public TerminalNode END() { return getToken(biesVMParser.END, 0); }
		public TerminalNode NUMBER() { return getToken(biesVMParser.NUMBER, 0); }
		public List<TerminalNode> NL() { return getTokens(biesVMParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(biesVMParser.NL, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDef; }
	}

	public final FunctionDefContext functionDef() throws RecognitionException {
		FunctionDefContext _localctx = new FunctionDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functionDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(FUN);
			setState(52);
			match(ES);
			setState(53);
			match(LABEL_IDENTIFIER);
			setState(57);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(54);
				match(ES);
				setState(55);
				match(T__0);
				setState(56);
				match(NUMBER);
				}
				break;
			}
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ES) {
				{
				setState(59);
				match(ES);
				setState(60);
				match(T__1);
				setState(61);
				match(LABEL_IDENTIFIER);
				}
			}

			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NL) {
				{
				setState(64);
				match(NL);
				}
			}

			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 72057593765445624L) != 0)) {
				{
				{
				setState(67);
				statement();
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NL) {
					{
					setState(68);
					match(NL);
					}
				}

				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(END);
			setState(77);
			match(ES);
			setState(78);
			match(LABEL_IDENTIFIER);
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(79);
				match(NL);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__16:
			case LDV:
			case ADD:
			case MUL:
			case SUB:
			case DIV:
			case NEG:
			case GT:
			case GTE:
			case LT:
			case LTE:
			case RET:
			case HLT:
			case APP:
			case PRN:
			case BLD:
			case BST:
			case LDF:
			case INI:
			case STK:
			case SRK:
			case LIN:
			case LTK:
			case CST:
			case INO:
			case AND:
			case OR:
			case XOR:
			case NOT:
			case SWP:
			case LNT:
			case LEN:
			case POW:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				instruction();
				}
				break;
			case FUN:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				functionDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public LoadInstrContext loadInstr() {
			return getRuleContext(LoadInstrContext.class,0);
		}
		public ArithInstrContext arithInstr() {
			return getRuleContext(ArithInstrContext.class,0);
		}
		public ControlInstrContext controlInstr() {
			return getRuleContext(ControlInstrContext.class,0);
		}
		public FuncInstrContext funcInstr() {
			return getRuleContext(FuncInstrContext.class,0);
		}
		public StringInstrContext stringInstr() {
			return getRuleContext(StringInstrContext.class,0);
		}
		public ComparisonInstrContext comparisonInstr() {
			return getRuleContext(ComparisonInstrContext.class,0);
		}
		public LogicalInstContext logicalInst() {
			return getRuleContext(LogicalInstContext.class,0);
		}
		public ListInstrContext listInstr() {
			return getRuleContext(ListInstrContext.class,0);
		}
		public SignInstrContext signInstr() {
			return getRuleContext(SignInstrContext.class,0);
		}
		public InputStringContext inputString() {
			return getRuleContext(InputStringContext.class,0);
		}
		public StackInstrContext stackInstr() {
			return getRuleContext(StackInstrContext.class,0);
		}
		public CastInstrContext castInstr() {
			return getRuleContext(CastInstrContext.class,0);
		}
		public LengthInstrContext lengthInstr() {
			return getRuleContext(LengthInstrContext.class,0);
		}
		public InitializeInstrContext initializeInstr() {
			return getRuleContext(InitializeInstrContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruction);
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				loadInstr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				arithInstr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				controlInstr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				funcInstr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(90);
				stringInstr();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(91);
				comparisonInstr();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(92);
				logicalInst();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(93);
				listInstr();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(94);
				signInstr();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(95);
				inputString();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(96);
				stackInstr();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(97);
				castInstr();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(98);
				lengthInstr();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(99);
				initializeInstr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitializeInstrContext extends ParserRuleContext {
		public TerminalNode INI() { return getToken(biesVMParser.INI, 0); }
		public TerminalNode LABEL_IDENTIFIER() { return getToken(biesVMParser.LABEL_IDENTIFIER, 0); }
		public List<TerminalNode> ES() { return getTokens(biesVMParser.ES); }
		public TerminalNode ES(int i) {
			return getToken(biesVMParser.ES, i);
		}
		public InitializeInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initializeInstr; }
	}

	public final InitializeInstrContext initializeInstr() throws RecognitionException {
		InitializeInstrContext _localctx = new InitializeInstrContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_initializeInstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(INI);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ES) {
				{
				setState(103);
				match(ES);
				}
			}

			setState(106);
			match(LABEL_IDENTIFIER);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ES) {
				{
				setState(107);
				match(ES);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoadInstrContext extends ParserRuleContext {
		public TerminalNode LDV() { return getToken(biesVMParser.LDV, 0); }
		public List<TerminalNode> ES() { return getTokens(biesVMParser.ES); }
		public TerminalNode ES(int i) {
			return getToken(biesVMParser.ES, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(biesVMParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(biesVMParser.NUMBER, i);
		}
		public TerminalNode STRING() { return getToken(biesVMParser.STRING, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public BoolDataContext boolData() {
			return getRuleContext(BoolDataContext.class,0);
		}
		public TerminalNode BLD() { return getToken(biesVMParser.BLD, 0); }
		public TerminalNode BST() { return getToken(biesVMParser.BST, 0); }
		public TerminalNode LDF() { return getToken(biesVMParser.LDF, 0); }
		public TerminalNode LABEL_IDENTIFIER() { return getToken(biesVMParser.LABEL_IDENTIFIER, 0); }
		public TerminalNode INI() { return getToken(biesVMParser.INI, 0); }
		public LoadInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loadInstr; }
	}

	public final LoadInstrContext loadInstr() throws RecognitionException {
		LoadInstrContext _localctx = new LoadInstrContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_loadInstr);
		int _la;
		try {
			int _alt;
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LDV:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				match(LDV);
				setState(114);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(111);
						match(ES);
						}
						} 
					}
					setState(116);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				setState(121);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NUMBER:
					{
					setState(117);
					match(NUMBER);
					}
					break;
				case STRING:
					{
					setState(118);
					match(STRING);
					}
					break;
				case T__17:
					{
					setState(119);
					array();
					}
					break;
				case T__13:
				case T__14:
				case T__15:
					{
					setState(120);
					boolData();
					}
					break;
				case EOF:
				case T__2:
				case T__3:
				case T__4:
				case T__5:
				case T__6:
				case T__7:
				case T__8:
				case T__9:
				case T__10:
				case T__11:
				case T__12:
				case T__16:
				case LDV:
				case ADD:
				case MUL:
				case SUB:
				case DIV:
				case NEG:
				case GT:
				case GTE:
				case LT:
				case LTE:
				case RET:
				case HLT:
				case APP:
				case PRN:
				case BLD:
				case BST:
				case LDF:
				case INI:
				case STK:
				case SRK:
				case LIN:
				case LTK:
				case CST:
				case INO:
				case AND:
				case OR:
				case XOR:
				case NOT:
				case SWP:
				case LNT:
				case LEN:
				case POW:
				case FUN:
				case END:
				case ES:
				case NL:
					break;
				default:
					break;
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ES) {
					{
					{
					setState(123);
					match(ES);
					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case BLD:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(BLD);
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ES) {
					{
					setState(130);
					match(ES);
					}
				}

				setState(133);
				match(NUMBER);
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ES) {
					{
					setState(134);
					match(ES);
					}
				}

				setState(137);
				match(NUMBER);
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ES) {
					{
					setState(138);
					match(ES);
					}
				}

				}
				break;
			case BST:
				enterOuterAlt(_localctx, 3);
				{
				setState(141);
				match(BST);
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ES) {
					{
					setState(142);
					match(ES);
					}
				}

				setState(145);
				match(NUMBER);
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ES) {
					{
					setState(146);
					match(ES);
					}
				}

				setState(149);
				match(NUMBER);
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ES) {
					{
					setState(150);
					match(ES);
					}
				}

				}
				break;
			case LDF:
				enterOuterAlt(_localctx, 4);
				{
				setState(153);
				match(LDF);
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ES) {
					{
					setState(154);
					match(ES);
					}
				}

				setState(157);
				match(LABEL_IDENTIFIER);
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ES) {
					{
					setState(158);
					match(ES);
					}
				}

				}
				break;
			case INI:
				enterOuterAlt(_localctx, 5);
				{
				setState(161);
				match(INI);
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ES) {
					{
					setState(162);
					match(ES);
					}
				}

				setState(165);
				match(LABEL_IDENTIFIER);
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ES) {
					{
					setState(166);
					match(ES);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArithInstrContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(biesVMParser.ADD, 0); }
		public TerminalNode ES() { return getToken(biesVMParser.ES, 0); }
		public TerminalNode MUL() { return getToken(biesVMParser.MUL, 0); }
		public TerminalNode SUB() { return getToken(biesVMParser.SUB, 0); }
		public TerminalNode DIV() { return getToken(biesVMParser.DIV, 0); }
		public TerminalNode NEG() { return getToken(biesVMParser.NEG, 0); }
		public TerminalNode POW() { return getToken(biesVMParser.POW, 0); }
		public ArithInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithInstr; }
	}

	public final ArithInstrContext arithInstr() throws RecognitionException {
		ArithInstrContext _localctx = new ArithInstrContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arithInstr);
		int _la;
		try {
			setState(195);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ADD:
				enterOuterAlt(_localctx, 1);
				{
				setState(171);
				match(ADD);
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ES) {
					{
					setState(172);
					match(ES);
					}
				}

				}
				break;
			case MUL:
				enterOuterAlt(_localctx, 2);
				{
				setState(175);
				match(MUL);
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ES) {
					{
					setState(176);
					match(ES);
					}
				}
